--- a/3d-transforms-perspective-func.html
+++ b/3d-transforms-perspective-func.html
@@ -5,14 +5,13 @@
 	<title>3D CSS Transforms: Perspective</title>
 	<link rel="stylesheet" href="3d-transforms.css" type="text/css">
 	<style>
-
         #stage{margin:0;}
-
-        #stage div:nth-child(2){
-            -webkit-transform: perspective(200px) rotate3d(20,10,0,-45deg);
-               -moz-transform: perspective(200px) rotate3d(20,10,0,-45deg);
-                -ms-transform: perspective(200px) rotate3d(20,10,0,-45deg);
+        .facet{
+            -webkit-transform: perspective(1000px) rotate3d(1,0,0,45deg);
+               -moz-transform: perspective(1000px) rotate3d(1,0,0,45deg);
+                -ms-transform: perspective(1000px) rotate3d(1,0,0,45deg);
         }
+        #perspvalue{font-family:monospace;}
 	</style>
 </head>
 <body>
@@ -20,13 +19,60 @@
         <h1>3D CSS Transforms: Perspective Function</h1>
     </header>
 
+	 <form id="changeperspective" action="#">
+    	<p><label for="perspective">perspective(</label>
+    	<input type="range" id="perspective" name="perspective" value="1000" min="0" max="1000">
+    	<span id="perspvalue"></span><code>px) rotate3d(20,10,0,-45deg);</code>
+    	<button type="reset">Reset</button></p>
+    </form>
+    
     <div id="stage">
         <div class="facet">1</div>
-        <div class="facet">2</div>
-        <div class="facet">3</div>
     </div>
 
-<script type="application/javascript" src="3d-transforms.js"></script>
+<script type="application/javascript" src="3d-transforms-escreset.js"></script>
+<script>
+'use strict';
+var form = document.forms[0];
 
+function updateStyle( value ){
+	var css = document.styleSheets[1],  // using the embedded style sheet.
+		perspective = document.getElementById('perspvalue'),
+		oldrule = css.cssRules[1].cssText.split(':'),
+		newrule = [],
+		nr;
+		
+		value = value + ''; // forces this to be a string.
+		
+		newrule[0] = oldrule[0]+':';
+		newrule[1] = oldrule[1].replace(/(perspective\()\d{1,}px\)/i, "$1"+value+'px)');
+	 	
+	 	nr = newrule.join('')
+		perspective.innerText = value.replace(/\D/g,'');
+	 	
+	 	console.log( nr );
+		css.insertRule(nr,1); // Insert at the old position.
+		css.deleteRule(2);    // Delete what is now the second rule.
+}
+
+form.addEventListener('submit', function(e){
+	e.preventDefault();
+}, false);
+
+form.addEventListener('reset', function(e){
+	updateStyle(1000);
+}, false);
+
+form.addEventListener('change', function(e){
+	e.preventDefault();
+	var value = document.getElementById('perspective').value;
+	updateStyle( value );
+},false);
+
+document.addEventListener('DOMContentLoaded', function(e){
+	document.getElementById('perspvalue').innerText = document.getElementById('perspective').value;
+},false)
+
+</script>
 </body>
 </html>
