--- a/3d-transforms-perspective-change.html
+++ b/3d-transforms-perspective-change.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>3D CSS Transforms: Changing Perspective</title>
+	<title>3D CSS Transforms: Changing Perspective with the perspective property</title>
 	<link rel="stylesheet" href="3d-transforms.css" type="text/css">
 	<style>
 	#stage{
@@ -57,24 +57,34 @@
 <script type="application/javascript">
 (function(){
 	var f = document.forms[0], 
-		css = document.styleSheets[1]; // grabs internal style sheet
+		css = document.styleSheets[1], // grabs internal style sheet
+		
+		updateStyles = function(value){
+			var c = css, 
+			persp = c.cssRules[0].cssText.split(':'),
+			newrule = persp[0],
+			startval = document.getElementById('startval'); // grabs first rule in that sheet & splits it.
+		
+			persp[1] = ': ';
+			persp[2] = value;
+			persp[3] = 'px; }';
+		
+			newrule = persp.join('');
+		
+			startval.innerHTML = +(value);
+	
+			c.insertRule(newrule ,0); // Insert at the top of the rule stack.
+			c.deleteRule(1);         // Delete what is now the second rule.
+		};
 	
 	f.addEventListener('submit',function(e){ 
-		e.preventDefault(); 
-		
+		e.preventDefault(); 	
 	},false);
 	
 	f.addEventListener('reset',function(e){ 
 		var startval = document.getElementById('startval'), 
-			val = startval.getAttribute('data-start'),
-			newrule = css.cssRules[0].cssText.split(':')[0];
-	
-		newrule += ': '+val+'px; }';
-	 
-		startval.innerHTML = val;
-		css.insertRule(newrule,0);
-		css.deleteRule(1);
-		
+			val = startval.getAttribute('data-start');
+		updateStyles( val );
 		removeError(); 
 
 	},false);
@@ -82,12 +92,10 @@
 	f.addEventListener('change', function(e){
 		e.preventDefault();
 	
-		var c = css, 
-			persp = c.cssRules[0].cssText.split(':'), // grabs first rule in that sheet & splits it.
-			perspective = f['perspective'].value, // grabs the range
-			newrule = persp[0],
-			startval = document.getElementById('startval');
-	
+		var perspective = f['perspective'].value; // grabs the range
+		
+		updateStyles( perspective );
+			
 		// Remove the error message if there is one.
 		removeError();
 		
@@ -95,18 +103,6 @@
 			showError();
 			return;
 		}
-		
-		persp[1] = ': ';
-		persp[2] = perspective;
-		persp[3] = 'px; }';
-		
-		newrule = persp.join('');
-		
-		startval.innerHTML = +(perspective);
-	
-		c.insertRule(newrule ,0); // Insert at the top of the rule stack.
-		c.deleteRule(1);         // Delete what is now the second rule.
-
 	}, false);
 
 	/*
