--- a/3d-transforms-perspective-func.html
+++ b/3d-transforms-perspective-func.html
@@ -12,7 +12,7 @@
                 -ms-transform: perspective(1000px) rotate3d(1,0,0,45deg);
                     transform: perspective(1000px) rotate3d(1,0,0,45deg);
         }
-        #perspvalue{font-family:monospace;}
+        #perspective{font-family:monospace; text-align:right;}
 	</style>
 </head>
 <body>
@@ -22,8 +22,7 @@
 
 	 <form id="changeperspective" action="#">
     	<p><label for="perspective">perspective(</label>
-    	<input type="range" id="perspective" name="perspective" value="1000" min="0" max="1000">
-    	<span id="perspvalue"></span><code>px) rotate3d(20,10,0,-45deg);</code>
+    	<input type="text" id="perspective" name="perspective" value="1000" min="0" max="1000" size="5"><code>px) rotate3d(20,10,0,-45deg);</code>
     	<button type="reset">Reset</button></p>
     </form>
     
@@ -34,76 +33,69 @@
 <script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script>
 'use strict';
-var form = document.forms[0];
+(function(d){
+	var form = d.forms[0];
 
-function updateStyle( value ){
-	var css = document.styleSheets[1],  // using the embedded style sheet.
-		perspective = document.getElementById('perspvalue'),
-		oldrule = css.cssRules[1].cssText.split(':'),
-		newrule = [],
-		nr;
+	function updateStyle( value ){
+		var css = d.styleSheets[1],  // using the embedded style sheet.
+			oldrule = css.cssRules[1].cssText.split(':'),
+			newrule = [],
+			nr;
 		
-	value = value + ''; // forces this to be a string.
+		value = value + ''; // forces this to be a string.
 		
-	newrule[0] = oldrule[0]+':';
-	newrule[1] = oldrule[1].replace(/(perspective\()\d{1,}px\)/i, "$1"+value+'px)');
-	 	
-	nr = newrule.join('')
-	perspective.innerText = +(value);
-	 	
-	css.insertRule(nr,1); // Insert at the old position.
-	css.deleteRule(2);    // Delete what is now the second rule.
-	
-	console.log( value );
-}
-
-form.addEventListener('submit', function(e){
-	e.preventDefault();
-}, false);
-
-form.addEventListener('reset', function(e){
-	updateStyle(1000);
-	removeError(); 
-}, false);
-
-form.addEventListener('change', function(e){
-	e.preventDefault();
-	var value = document.getElementById('perspective').value;
-	// Remove the error message if there is one.
-	removeError();
-	
-	if( value < 0 ){
-		showError();
-		return;
-	} 
-	updateStyle( value );
-},false);
-
-window.addEventListener('DOMContentLoaded', function(e){
-	document.getElementById('perspvalue').innerText = document.getElementById('perspective').value;
-},false)
-
-/*
-   For browsers that don't support range, 
-   and run the risk of a zero value input. 
-*/
-function removeError(){
-	var err = document.getElementById('error');
-	if( err ){
-		err.parentNode.removeChild(err);
+		newrule[0] = oldrule[0]+':';
+		newrule[1] = oldrule[1].replace(/(perspective\()\d{1,}px\)/i, "$1"+value+'px)');
+		
+		nr = newrule.join('')
+		
+		css.insertRule(nr,1); // Insert at the old position.
+		css.deleteRule(2);    // Delete what is now the second rule.
 	}
-}
 
-function showError(){
-	var msg = document.createTextNode('Value must be greater than zero.'),
-	err = document.createElement('p');
+	form.addEventListener('submit', function(e){
+		e.preventDefault();
+	}, false);
+
+	form.addEventListener('reset', function(e){
+		updateStyle(1000);
+		removeError(); 
+	}, false);
+
+	form.addEventListener('change', function(e){
+		e.preventDefault();
+		var value = d.getElementById('perspective').value;
+		// Remove the error message if there is one.
+		removeError();
+	
+		if( value <= 0 ){
+			showError();
+			return;
+		} 
+		updateStyle( value );
+	},false);
+
+	/*
+	   For browsers that don't support range, 
+	   and run the risk of a zero value input. 
+	*/
+	function removeError(){
+		var err = d.getElementById('error');
+		if( err ){
+			err.parentNode.removeChild(err);
+		}
+	}
+
+	function showError(){
+		var msg = d.createTextNode('Value must be greater than zero.'),
+		err = d.createElement('p');
 		
-	err.id = 'error';
-	err.appendChild(msg);
+		err.id = 'error';
+		err.appendChild(msg);
 			
-	form.appendChild(err);
-}
-
+		form.appendChild(err);
+	}
+})(document);
 </script>
 </body>
 </html>
