--- a/3d-transforms-perspective-change.html
+++ b/3d-transforms-perspective-change.html
@@ -31,7 +31,7 @@
 			-ms-transform: rotate3d(-10,0,0,-45deg);
 				transform: rotate3d(-10,0,0,-45deg);
 	}
-
+	#perspective{font-family:monospace;text-align: right;}
 	</style>
 </head>
 <body>
@@ -42,8 +42,7 @@
 
     <form id="persprange">
         <p><label for="perspective">perspective:</label> 
-        <input type="range" id="perspective" value="500" min="0" max="1500" required>
-        <span id="startval" data-start="500"></span>px</p>
+        <input type="text" id="perspective" value="500" min="0" max="1500" required size="5"><code>px</code></p>
         <p><button type="reset">Reset</button></p>
     </form>
 
@@ -55,15 +54,15 @@
 
 <script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script type="application/javascript">
-(function(){
-	var f = document.forms[0], 
-		css = document.styleSheets[1], // grabs internal style sheet
+(function(d){
+	var f = d.forms[0], 
+		css = d.styleSheets[1], // grabs internal style sheet
 		
 		updateStyles = function(value){
 			var c = css, 
 			persp = c.cssRules[0].cssText.split(':'),
 			newrule = persp[0],
-			startval = document.getElementById('startval'); // grabs first rule in that sheet & splits it.
+			startval = d.getElementById('startval'); // grabs first rule in that sheet & splits it.
 		
 			persp[1] = ': ';
 			persp[2] = value;
@@ -71,8 +70,6 @@
 		
 			newrule = persp.join('');
 		
-			startval.innerHTML = +(value);
-	
 			c.insertRule(newrule ,0); // Insert at the top of the rule stack.
 			c.deleteRule(1);         // Delete what is now the second rule.
 
@@ -83,7 +80,7 @@
 	},false);
 	
 	f.addEventListener('reset',function(e){ 
-		var startval = document.getElementById('startval'), 
+		var startval = d.getElementById('startval'), 
 			val = startval.getAttribute('data-start');
 		updateStyles( val );
 		removeError(); 
@@ -94,8 +91,6 @@
 		e.preventDefault();
 	
 		var perspective = f['perspective'].value; // grabs the range
-		
-		updateStyles( perspective );
 			
 		// Remove the error message if there is one.
 		removeError();
@@ -104,34 +99,32 @@
 			showError();
 			return;
 		}
+		
+		updateStyles( perspective );
+		
 	}, false);
 
 	/*
-	   For browsers that don't support range, 
-	   and run the risk of a zero value input. 
+	   Eliminates the risk of a zero value input. 
 	*/
 	function removeError(){
-		var err = document.getElementById('error');
+		var err = d.getElementById('error');
 		if( err ){
 			err.parentNode.removeChild(err);
 		}
 	}
 	
 	function showError(){
-		var msg = document.createTextNode('Value must be greater than zero.'),
-		err = document.createElement('p');
+		var msg = d.createTextNode('Value must be greater than zero.'),
+		err = d.createElement('p');
 			
 		err.id = 'error';
 		err.appendChild(msg);
 				
 		f.appendChild(err);
 	}
-	
-	window.addEventListener('DOMContentLoaded', function(e){
-		var startval = document.getElementById('startval');
-		startval.innerHTML = startval.getAttribute('data-start');
-	},false);
-})();
+
+})(document);
 </script>
 
 
