--- a/3d-transforms-perspective-func.html
+++ b/3d-transforms-perspective-func.html
@@ -76,8 +76,7 @@
 	},false);
 
 	/*
-	   For browsers that don't support range, 
-	   and run the risk of a zero value input. 
+	   Eliminates the value of a zero input.
 	*/
 	function removeError(){
 		var err = d.getElementById('error');
