Ensuring code is modularized. Adding a 3d-transforms-transform-style-draft.html demo.

--- a/3d-transforms-containing.html
+++ b/3d-transforms-containing.html
@@ -41,7 +41,7 @@
 
     <form id="toggle">
         <p>
-            <input type="checkbox" id="togglePersp" checked> <label for="togglePersp">Toggle <code>perspective</code></label>
+            <input type="checkbox" id="togglePersp" checked><label for="togglePersp">Toggle <code>perspective</code></label>
         </p>
     </form>
 
@@ -53,17 +53,17 @@
 
 <script type="application/javascript" src="3d-transforms-pf.js"></script>
 <script type="application/javascript">
-(function(){
-	var toggle = document.getElementById('toggle');
+(function(d){
+	var toggle = d.getElementById('toggle');
 	if( toggle ){
 		toggle.addEventListener('change', function(e){
 			e.preventDefault();
-			var stage = document.getElementById('stage');
+			var stage = d.getElementById('stage');
 			// consider adding support for non classList browsers
 			e.target.checked ? stage.classList.add('perspective') : stage.classList.remove('perspective');
 		}, false);
 	}
-})();
+})(document);
 </script>
 
 </body>
