--- a/3d-transforms-scale3d.html
+++ b/3d-transforms-scale3d.html
@@ -128,13 +128,13 @@
 <script type="application/javascript" src="3d-transforms-escreset.js"></script>
 
 <script type="application/javascript">
-(function(){
-	var f = document.forms[0];
+(function(d){
+	var f = d.forms[0];
 
 	var updatecss = function(e){
 		
 		e.preventDefault();
-		css = document.styleSheets[1],
+		css = d.styleSheets[1],
 		s3d = css.cssRules[2].cssText.split(':')[0];
 		newrule = [];
 	
@@ -155,7 +155,7 @@
 		css.deleteRule(3);         // Delete what is now the second rule.
 	}
 	var reset = function(e){
-		var css = document.styleSheets[1], 
+		var css = d.styleSheets[1], 
 			selector = [], 
 			newrule;
 	
@@ -174,7 +174,7 @@
 	f.addEventListener('change',updatecss,false);
 
 	f.addEventListener('submit',updatecss,false);
-})();
+})(document);
 </script>
 
 
