Final edits and updates to images throughout. May still need to update images.

--- a/3d-transforms-perspective-func.html
+++ b/3d-transforms-perspective-func.html
@@ -28,7 +28,9 @@
     
     <div id="stage">
         <div class="facet">1</div>
-    </div>
+		<div class="facet">2</div> 
+ 		<div class="facet">3</div>
+    </div> 
 
 <script type="application/javascript" src="3d-transforms-escreset.js"></script>
 <script>
