--- a/3d-transforms-perspective-origin.html
+++ b/3d-transforms-perspective-origin.html
@@ -6,10 +6,12 @@
 	<link rel="stylesheet" href="3d-transforms.css" type="text/css">
 	<style type="text/css">
 	.perspective{
-    	-webkit-perspective: 1000px;
-      	   -moz-perspective: 1000px;
-            -ms-perspective: 1000px;
-                perspective: 1000px;
+    	-webkit-perspective: 500px;
+      	   -moz-perspective: 500px;
+            -ms-perspective: 500px;
+                perspective: 500px;
+                
+                -webkit-perspective-origin: 200% 1500px;
 	}
 
 	
@@ -22,7 +24,7 @@
 	</style>
 </head>
 <body>
-     <header>
+   <header>
         <h1>3D CSS Transforms: <code>perspective-origin</code></h1>
     </header>
 
